DIAC-1327 Appellant application decided- Detained (in IRC or Prison) notification (#1502)
* handler changes

* fix func test not running

* added new generato

* changes to handler

* added test adaptation

* added test adaptation

* added generator

* fix run

---------

Co-authored-by: erclaudio <claudio.andrei@icloud.com>